--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <link href="https://assets.chucknorris.host/img/avatar/chuck-norris.png" rel="icon" type="image/x-icon">
+    <title>Chuck Norris Jokes machine</title>
+    <meta name="description" content="Chuck Norris Jokes random machine">
   </head>
   <body>
     <noscript>
