--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link href="https://assets.chucknorris.host/img/avatar/chuck-norris.png" rel="icon" type="image/x-icon">
-    <title>Chuck Norris Jokes machine</title>
+    <link href="favicon.ico" rel="icon" type="image/x-icon">
     <meta name="description" content="Chuck Norris Jokes random machine">
+    <title>Chuck Norris Jokes machine</title>
+
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,500,700,400italic|Material+Icons">
+
     <style>
         * {
             box-sizing: border-box;
