--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,17 @@
             margin: 0;
             padding: 0;
         }
+        ::-moz-selection { /* Code for Firefox */
+            color: white;
+            background: black;
+            font-size: bold;
+        }
+
+        ::selection {
+            color: white;
+            background: black;
+            font-size: bold;
+        }
         ul {
             list-style-type: none;
         }
@@ -44,15 +55,6 @@
 
             /* Support for IE. */
             font-feature-settings: 'liga';
-        }
-
-        @media only screen and (max-width: 768px) {
-            * {
-                display: block;
-                width: 100%;
-                max-width: 100%;
-                padding: 0 16px;
-            }
         }
     </style>
   </head>
